force-app/main/default/objects/Repository__c/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <description>Number of branches of the repository</description>
    <label>Number of branches</label>
    <summaryForeignKey>Branch__c.Repository__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>