force-app/main/default/objects/Repository__c/fields/Commit_Number__c.field-meta.xml
<CustomField>
    <fullName>Commit_Number__c</fullName>
    <description>Number of commits of the repository</description>
    <label>Number of commits</label>
    <summaryForeignKey>Commit__c.Repository__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>