force-app/main/default/objects/Repository__c/fields/Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>Default_Branch__c</fullName>
    <label>Default Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>