force-app/main/default/objects/Repository__c/fields/Downloads_URL__c.field-meta.xml
<CustomField>
    <fullName>Downloads_URL__c</fullName>
    <label>Downloads URL</label>
    <type>Url</type>
</CustomField>