force-app/main/default/objects/Repository__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>IF(Rating__c &lt; 5, image(&quot;/resource/1585602546000/GraphicsPackNew/fatcow/farmfresh/16/flag_red.png&quot;,&quot;Bad repo&quot;), 
				IF(Rating__c &lt;= 7, image(&quot;/resource/1585602546000/GraphicsPackNew/fatcow/farmfresh/16/flag_yellow.png&quot;,&quot;Normal repo&quot;), 
							image(&quot;/resource/1585602546000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&quot;,&quot;Excellent repo&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>