force-app/main/default/objects/Repository__c/fields/Forks_URL__c.field-meta.xml
<CustomField>
    <fullName>Forks_URL__c</fullName>
    <label>Forks URL</label>
    <type>Url</type>
</CustomField>