force-app/main/default/objects/Repository__c/fields/GitHubOwner__c.field-meta.xml
<CustomField>
    <fullName>GitHubOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>GitHub_User__c</referenceTo>
    <relationshipLabel>Repositories</relationshipLabel>
    <relationshipName>Repositories</relationshipName>
    <type>Lookup</type>
</CustomField>