force-app/main/default/objects/Repository__c/fields/Has_Downloads__c.field-meta.xml
<CustomField>
    <fullName>Has_Downloads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Downloads</label>
    <type>Checkbox</type>
</CustomField>