force-app/main/default/objects/Repository__c/fields/Has_Issues__c.field-meta.xml
<CustomField>
    <fullName>Has_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Issues</label>
    <type>Checkbox</type>
</CustomField>