force-app/main/default/objects/Repository__c/fields/Has_Pages__c.field-meta.xml
<CustomField>
    <fullName>Has_Pages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pages</label>
    <type>Checkbox</type>
</CustomField>