force-app/main/default/objects/Repository__c/fields/Has_Projects__c.field-meta.xml
<CustomField>
    <fullName>Has_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Projects</label>
    <type>Checkbox</type>
</CustomField>