force-app/main/default/objects/Repository__c/fields/Has_Wiki__c.field-meta.xml
<CustomField>
    <fullName>Has_Wiki__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Wiki</label>
    <type>Checkbox</type>
</CustomField>