force-app/main/default/objects/Repository__c/fields/IsDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>