force-app/main/default/objects/Repository__c/fields/IsFork__c.field-meta.xml
<CustomField>
    <fullName>IsFork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fork</label>
    <type>Checkbox</type>
</CustomField>