force-app/main/default/objects/Repository__c/fields/IsMonitored__c.field-meta.xml
<CustomField>
    <fullName>IsMonitored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitor?</label>
    <type>Checkbox</type>
</CustomField>