force-app/main/default/objects/Repository__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Repositories</relationshipLabel>
    <relationshipName>Repositories</relationshipName>
    <type>Lookup</type>
</CustomField>