force-app/main/default/objects/Repository__c/fields/Login_User__c.field-meta.xml
<CustomField>
    <fullName>Login_User__c</fullName>
    <formula>GitHubOwner__r.Login__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login User</label>
    <type>Text</type>
</CustomField>