force-app/main/default/objects/Repository__c/fields/Number_of_Favourites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Favourites__c</fullName>
    <label>Number of Favourites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>