force-app/main/default/objects/Repository__c/fields/Number_of_Forks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Forks__c</fullName>
    <label>Number of forks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>