force-app/main/default/objects/Repository__c/fields/Number_of_Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Issues__c</fullName>
    <label>Number of Open Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>