force-app/main/default/objects/Repository__c/fields/Repository_Id__c.field-meta.xml
<CustomField>
    <fullName>Repository_Id__c</fullName>
    <label>Repository Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>