force-app/main/default/objects/Repository__c/fields/Tags_URL__c.field-meta.xml
<CustomField>
    <fullName>Tags_URL__c</fullName>
    <label>Tags URL</label>
    <type>Url</type>
</CustomField>