force-app/main/default/objects/Repository__c/validationRules/Rating_Between_0_and_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Between_0_and_10</fullName>
    <active>true</active>
    <description>Validation rule to set up the rating between 0 (poor) and 10 (excellent)</description>
    <errorConditionFormula>Rating__c &lt; 0 || Rating__c &gt; 10</errorConditionFormula>
    <errorMessage>Rating should be between 0 and 10</errorMessage>
</ValidationRule>