force-app/main/default/objects/Repository__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsMonitored__c</columns>
    <columns>Rating__c</columns>
    <columns>Flag__c</columns>
    <columns>Language__c</columns>
    <columns>License__c</columns>
    <columns>GitHub_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>